# niva_modbus

./: .gitignore  CMakeLists.txt  CMakePresets.json  ReadMe.md
.config/openocd/: danik.cfg  selickogo.cfg  stm32f3disco_A203001113.cfg
examples/native/: read_coils.c
examples/stm32/: .mxproject  CMakeLists.txt  ReadMe.md  compile_commands.json  example_stm32f3disco.ioc
examples/stm32/.config/openocd/: j_link.cfg  valera_pink_wi.cfg  valera_pink_wii.cfg
examples/stm32/Core/Inc/: main.h  stm32f3xx_it.h
examples/stm32/Core/Src/: dma.c  gpio.c  main.c  stm32f3xx_it.c  tim.c  usart.c
examples/stm32/cmake/: arm-helper.cmake  gcc-arm-none-eabi.cmake
examples/stm32/cmake/stm32cubemx/: CMakeLists.txt
examples/stm32/lib/freemodbus/: CMakeLists.txt
examples/stm32/lib/freemodbus/port/: port.c  port.h  portevent.c  portserial.c  porttimer.c
examples/stm32/lib/niva_modbus_stm32/src/: niva_modbus_stm32.c  niva_modbus_stm32.h
examples/stm32/lib/niva_modbus_stm32/src/niva_modbus_stm32/: config.h  dma.h  gpio.h  rx_packet.h  tim.h  usart.c  usart.h
examples/stm32/lib/niva_modbus_stm32/src/template/: niva_modbus_stm32_config.h
examples/stm32_freertos/: .mxproject  CMakeLists.txt  example_stm32f3disco.ioc  stm32f303vctx_flash.ld
examples/stm32_freertos/Core/Inc/: main.h  niva_modbus_stm32_config.h  stm32f3xx_hal_conf.h  stm32f3xx_it.h  usart.h
examples/stm32_freertos/Core/Src/: dma.c  freertos.c  gpio.c  i2c.c  main.c  stm32f3xx_hal_timebase_tim.c  stm32f3xx_it.c  tim.c  usart.c  usb.c
examples/stm32_freertos/cmake/: arm-helper.cmake  gcc-arm-none-eabi.cmake
examples/stm32_freertos/cmake/stm32cubemx/: CMakeLists.txt
examples/stm32_freertos/lib/niva_modbus_stm32/: CMakeLists.txt
examples/stm32_freertos/lib/niva_modbus_stm32/src/: niva_modbus_stm32.c  niva_modbus_stm32.h
examples/stm32_freertos/lib/niva_modbus_stm32/src/niva_modbus_stm32/: dma.c  dma.h  gpio.h  lock.c  lock.h  tim.h  usart.c  usart.h
src/: niva_modbus.c  niva_modbus.h
src/modbus/: crc16.c  crc16.h  data_model.h  endianess.h  exception_codes.h  function_codes.h
tests/: broken_packets_tests.c  crc16_tests.c  endianess_tests.c  read_coils_and_discretes_tests.c  read_coils_tests.c
